--- a/app/src/main/res/layout/business_fragment_home.xml
+++ b/app/src/main/res/layout/business_fragment_home.xml
@@ -138,6 +138,9 @@
                         android:gravity="center"
                         android:text="Doanh Thu: 0"
                         android:textColor="@color/black"
+                        android:ellipsize="marquee"
+                        android:marqueeRepeatLimit="@integer/material_motion_duration_short_1"
+                        android:singleLine="true"
                         app:layout_constraintEnd_toStartOf="@+id/tv_DonHang"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tv_DonHang" />
@@ -163,6 +166,9 @@
                         android:background="@drawable/business_shape_yellow"
                         android:gravity="center"
                         android:text="Lợi nhuận: 0"
+                        android:ellipsize="marquee"
+                        android:marqueeRepeatLimit="@integer/material_motion_duration_short_1"
+                        android:singleLine="true"
                         android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tv_DonHang"
