--- a/app/src/main/res/layout/business_button_product.xml
+++ b/app/src/main/res/layout/business_button_product.xml
@@ -33,10 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:layout_marginTop="16dp"
         android:clipChildren="true"
-        android:gravity="right"
-        android:background="#2fc5bf">
+        android:gravity="right">
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:background="#2fc5bf">-->
 
         <ImageButton
             android:id="@+id/edit_button"
