--- a/app/src/main/res/layout/business_button_storage.xml
+++ b/app/src/main/res/layout/business_button_storage.xml
@@ -43,6 +43,7 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="3dp"
+                android:textColor="@color/black"
                 android:text="@string/SoSanPham"
                 android:textAlignment="center" />
             <TextView
@@ -52,6 +53,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="3dp"
                 android:layout_marginEnd="3dp"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:text="@string/demo_0"
                 android:textAlignment="center" />
@@ -73,6 +75,7 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="3dp"
+                android:textColor="@color/black"
                 android:text="@string/SoLuongTon"
                 android:textAlignment="center" />
             <TextView
@@ -82,6 +85,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="3dp"
                 android:layout_marginEnd="3dp"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:text="@string/demo_0"
                 android:textAlignment="center" />
@@ -92,6 +96,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:background="@drawable/business_shape_blue"
             android:orientation="vertical">
@@ -103,6 +108,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="6dp"
+                android:textColor="@color/black"
                 android:text="@string/GiaTriTon"
                 android:textAlignment="center" />
             <TextView
@@ -111,6 +117,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="5dp"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:text="@string/demo_0"
                 android:textAlignment="center" />
