--- a/app/src/main/res/layout/business_employee_item.xml
+++ b/app/src/main/res/layout/business_employee_item.xml
@@ -66,6 +66,10 @@
         android:layout_marginBottom="1dp"
         android:text="Email"
         android:textColor="@android:color/black"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="@integer/material_motion_duration_short_1"
+        android:singleLine="true"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toTopOf="@id/employee_phone"
         app:layout_constraintBottom_toBottomOf="@id/employee_phone"
         app:layout_constraintStart_toStartOf="@id/employee_date"/>
