--- a/app/src/main/res/layout/business_notification_item.xml
+++ b/app/src/main/res/layout/business_notification_item.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/business_shape_white">
 
     <TextView
         android:id="@+id/notification_title"
@@ -10,19 +10,28 @@
         android:layout_height="wrap_content"
         android:text="Tiêu đề"
         android:textColor="@android:color/black"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+       />
 
     <TextView
         android:id="@+id/notification_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DD/MM/YYYY"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 
     <TextView
         android:id="@+id/notification_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nội dung"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 </LinearLayout>
