--- a/app/src/main/res/layout/business_provider_item.xml
+++ b/app/src/main/res/layout/business_provider_item.xml
@@ -63,10 +63,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="Email"
+        android:text="Email: abcd@gmail.com"
         android:textColor="@android:color/black"
         android:layout_marginEnd="10dp"
-        app:layout_constraintStart_toStartOf="@id/provider_date"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/provider_phone"
         app:layout_constraintBottom_toBottomOf="@id/provider_phone"/>
 
