--- a/app/src/main/res/layout/business_report_fragment_finance.xml
+++ b/app/src/main/res/layout/business_report_fragment_finance.xml
@@ -77,7 +77,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -113,7 +114,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -158,7 +160,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
