--- a/app/src/main/res/layout/business_report_fragment_sale.xml
+++ b/app/src/main/res/layout/business_report_fragment_sale.xml
@@ -106,7 +106,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="@string/demo_0"
-                                android:textSize="25sp" />
+                                android:textSize="25sp"
+                                android:textColor="@color/black"/>
                         </LinearLayout>
                     </LinearLayout>
 
@@ -133,7 +134,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:text="Loi nhuan"
+                                android:text="Lợi nhuận"
                                 android:textAlignment="center"
                                 android:textColor="@color/black" />
 
@@ -143,7 +144,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="@string/demo_0"
-                                android:textSize="25sp" />
+                                android:textSize="25sp"
+                                android:textColor="@color/black"/>
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
@@ -188,7 +190,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="@string/demo_0"
-                                android:textSize="25sp" />
+                                android:textSize="25sp"
+                                android:textColor="@color/black"/>
                         </LinearLayout>
 
 
@@ -217,7 +220,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:text="So luong ban ra"
+                                android:text="Số lượng bán ra"
                                 android:textAlignment="center"
                                 android:textColor="@color/black" />
 
@@ -227,7 +230,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="@string/demo_0"
-                                android:textSize="25sp" />
+                                android:textSize="25sp"
+                                android:textColor="@color/black"/>
                         </LinearLayout>
 
                     </LinearLayout>
