--- a/app/src/main/res/layout/business_report_fragment_storage.xml
+++ b/app/src/main/res/layout/business_report_fragment_storage.xml
@@ -100,7 +100,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="25sp"/>
+                            android:textSize="25sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -136,7 +137,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="25sp"/>
+                            android:textSize="25sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -179,7 +181,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="25sp"/>
+                            android:textSize="25sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -214,7 +217,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="@string/demo_0"
-                            android:textSize="25sp"/>
+                            android:textSize="25sp"
+                            android:textColor="@color/black"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
