--- a/app/src/main/res/layout/business_fragment_quanly.xml
+++ b/app/src/main/res/layout/business_fragment_quanly.xml
@@ -23,13 +23,15 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/layoutTongThuChi"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
     <Spinner
         android:id="@+id/spinner_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tvThuChi"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="5dp">
 
     </Spinner>
 
@@ -37,7 +39,7 @@
         android:id="@+id/layoutTongThuChi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/tvThuChi"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +112,7 @@
         android:text="Các khoản thu chi"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/layoutTongThuChi"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"
