--- a/app/src/main/res/layout/item_business_quanly.xml
+++ b/app/src/main/res/layout/item_business_quanly.xml
@@ -10,14 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/tvAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Số tiền"
-        android:textSize="14sp"
-        android:textColor="#757575" />
+        android:textSize="16sp"
+        android:textColor="#343333"
+        android:layout_marginEnd="10dp"/>
 </LinearLayout>
