--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,12 +87,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="**********"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"/>
 
         <CheckBox
             android:id="@+id/CheckMoney"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <!-- Biểu đồ PieChart -->
