--- a/app/src/main/res/layout/business_product_edit_item.xml
+++ b/app/src/main/res/layout/business_product_edit_item.xml
@@ -93,7 +93,8 @@
         android:text="Số lượng: 0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/et_product_edit_ghichu"
-        app:layout_constraintTop_toBottomOf="@id/et_product_edit_ghichu" />
+        app:layout_constraintTop_toBottomOf="@id/et_product_edit_ghichu"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_product_edit_daban"
@@ -105,7 +106,8 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toStartOf="@id/tv_product_edit_tonkho"
         app:layout_constraintStart_toEndOf="@id/tv_product_edit_sl"
-        app:layout_constraintTop_toTopOf="@id/tv_product_edit_sl" />
+        app:layout_constraintTop_toTopOf="@id/tv_product_edit_sl"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_product_edit_tonkho"
@@ -118,6 +120,6 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_product_edit_daban"
-        app:layout_constraintTop_toTopOf="@id/tv_product_edit_daban" />
+        app:layout_constraintTop_toTopOf="@id/tv_product_edit_daban" android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
