--- a/app/src/main/res/layout/fragment_budget_overview.xml
+++ b/app/src/main/res/layout/fragment_budget_overview.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.budget.BudgetFragmentOverView">
+    tools:context=".ui.budget.NganSachFragmentOverView">
 
     <ScrollView
         android:layout_width="match_parent"
