--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_budget"
-        android:name="com.example.mobileapp.ui.budget.BudgetFragment"
+        android:name="com.example.mobileapp.ui.budget.NganSachFragment"
         android:label="@string/title_budget"
         tools:layout="@layout/fragment_budget" />
 
